fix(ColorContainer): reduce gap sice

--- a/src/atoms/ColorContainer/style.css
+++ b/src/atoms/ColorContainer/style.css
@@ -4,8 +4,8 @@
   display: grid;
   grid-template-columns: repeat(4, 20rem);
   justify-content: center;
-  grid-column-gap: 4rem;
-  grid-row-gap: 4rem;
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
   max-height: 550px;
   flex-wrap: wrap;
   overflow-y: scroll;
